2004-05-15  Derek Price  <derek@ximbiot.com>

	* cvs.h, client.c, history.c, main.c, rcs.c, sanity.sh, server.c:
	Back out get_date() changes from 2004-04-28.

2004-05-14  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (trailingslashes): During cleanup remove topfile,v to
	avoid problems in later tests (editor-1).

2004-05-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh (trailingslashes): Note TODO item #205 in the comment.

2004-05-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh (trailingslashes): New tests to expose a bug in CVS when
	paths are specified with trailing slashes.  This relates to TODO #205.

2004-05-13  Mark D. Baushke  <mdb@cvshome.org>

	* ls.c (ls): Use client_senddate() so the server is able to parse
	the date/time.

2004-05-12  Derek Price  <derek@ximbiot.com>

	* entries.c, subr.c: Gratuitous reformatting.

2004-05-12  Derek Price  <derek@ximbiot.com>

	* subr.c (file_has_conflict), vers_ts.c (time_stamp_server): Only
	special case "=" when it is the only character in a timestamp field.
	Gratuitous reformatting.
	* vers_ts.c (time_stamp_server): Check for NULL in a consistent manner.
	Gratuitous reformatting.

2004-05-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (ls): Add some new tests of the ls command with dates
	specified and show an assertion error when an existing file is
	specifically requested.
	(Original patch from Alexander Taler <dissent@cvshome.org>.)

2004-05-11  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (RCSKEYDATE): New regular expression to match the rcs
	keyword date format.
	(keyword,keywordlog): Use it.
	(RCSDELTADATE): New regular expression to match the internal rcs
	file format delta.
	(admin): Use it.
	(RCSDATE): Deleted.
	(ISO8601DATE}: A more exact regular expression for cvs log date
	output than the previous RCSDATE variable.
	(basica,basic2,branches,branches3,multibranch,import,importb,importc,
	join,modules,editor,binfiles,log,log2,keyword,multibranch2,admin,
	reserved,recase,multiroot,trace):